--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   "author": "Andrii",
   "license": "MIT",
   "dependencies": {
+    "@apollo/server": "^4.9.5",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "graphql-tag": "^2.12.6",
+    "http": "^0.0.1-security",
+    "mongoose": "^8.0.0",
     "nodemon": "^3.0.1"
   }
 }
