--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "List of users - server",
   "main": "index.js",
-  
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,6 +18,7 @@
     "express": "^4.18.2",
     "graphql-tag": "^2.12.6",
     "http": "^0.0.1-security",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1"
   }
